# arcpy-parquet

./: .bumpversion.cfg  .gitignore  AGENTS.md  Makefile  README.md  environment.yml  make.cmd  pyproject.toml  setup.py  zensical.toml
.github/agents/: copilot-instructions.md
.github/workflows/: docs.yml  make-docs.yml  make-mkdocs.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
arcgis/: ArcPy-Parquet-Tools.CreateSchemaFile.pyt.xml  ArcPy-Parquet-Tools.FeatureClassToParquet.pyt.xml  ArcPy-Parquet-Tools.GeoparquetToFeatureClass.pyt.xml  ArcPy-Parquet-Tools.ParquetToFeatureClass.pyt.xml  ArcPy-Parquet-Tools.pyt  ArcPy-Parquet-Tools.pyt.xml  README.md  arcpy-parquet.aprx  arcpy-parquet.tbx  arcpy_parquet.pyt
conda-recipe/: meta.yaml
config/: config.ini
docsrc/: conf.py  index.rst  mkdocs.yml
docsrc/mkdocs/: api.md  (+3 more)
notebooks/: Untitled.ipynb  basemaps-schema-interrogation.ipynb  create-fc-testing.ipynb  geoparquet-interrogation.ipynb  get-downloads.ipynb  h3-to-geometry.ipynb  notebook-template.ipynb  parquet-max-string-lengths.ipynb
references/: az_broadband.pyt
scripts/: make_data.py  make_pyt_archive.py
speckit/: tasks.md
src/: make_data.py
testing/: README_TESTS.md  conftest.py  test_arcpy_parquet.py  test_compat_deprecations.py  test_geoparquet_api.py  test_geoparquet_roundtrip.py  test_geoparquet_validity.py  test_parquet_to_feature_class.py
(+39 files in other folders)
